--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "typed": "^10.0.0-beta.2",
+    "typed.js": "^2.0.16",
+    "types.js": "^1.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
