--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.0.1",
     "typed": "^10.0.0-beta.2",
     "typed.js": "^2.0.16",
     "types.js": "^1.9.5",
